# PGA-NeuS

./: .gitignore  .gitmodules  README.md  exp_runner.py  gen.py  gen_tmp.py  generate_camera_setting.py  genshin_start.py  genshin_start_copy.py  quad_and_eula.py  rename.py  requirements.txt  test_merge.py  tmp.py  train.py
config/: default.py
config/neus_conf/: wmask_js_bk_single_multi_qrs.conf
confs/: small_structure_white_bkgd.conf  thin_structure_joyo.conf  thin_structure_palette.conf  thin_structure_white_bkgd.conf  tree_structure_white_bkgd.conf  wmask.conf  wmask_blender_bunny.conf  wmask_blender_obstacle.conf  wmask_js_bk_single_multi_qrs_obj4.conf  wmask_js_bk_single_multi_qrs_obj5.conf  womask_js.conf  womask_js_obj_single_multi_qrs.conf
confs/json/: cameras_setting.json  dragon_slip_short.json  furina.json  furina_long.json  furina_long_20.json  genshin_start.json  nahida.json  out_refine_RT.json  soap.json  soap_long_flip.json  soap_long_sub.json  train_dynamic_setting.json  transform.json  tree_joyo.json  tree_joyo_original.json  tree_joyo_short.json  tree_slide.json  tree_slide_original.json  tree_slide_short.json  yoyo_book_long_original.json  yoyo_book_original.json  yoyo_book_short.json  (+3 more)
dynamic_test/: cameras_setting.json  fixed_camera_setting.json  furina.json  genshin_start.json  test_render.json
lib/: diff_pd_nerf.py  mesh2fem_env.py
models/: dataset.py  dataset_json.py  dynamic_renderer.py  dynamic_rigid_renderer.py  renderer.py  rigid_body.py  rigid_body_sdf.py  test.ply
preprocess_custom_data/aruco_preprocess/: CMakeLists.txt
(+24 files in other folders)
